--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "@hono/node-server": "^1.11.1",
         "esbuild": "^0.20.2",
         "hono": "^4.2.7",
-        "react": "^18.3.0",
-        "react-dom": "^18.3.0"
+        "react": "18.3.0-next-3706edb81-20230308",
+        "react-dom": "18.3.0-next-3706edb81-20230308",
+        "react-server-dom-webpack": "0.0.0-experimental-41b4714f1-20230328"
     }
 }
