--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "reactjs-react_server_component",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server/index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server.js",
+        "dev": "node server.js"
     },
     "keywords": [],
     "author": "",
